objects/EUR_CRM_ObjPromo_Action__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Action_List_External_ID__c</fullName>
        <formula>EUR_CRM_OP_Action_List_Template__r.EUR_CRM_External_ID__c</formula>
        <label>Action List External ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Can_Reoccur__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Reoccur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Does_not_repeat_on_failure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does not repeat on failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Entitle_Achievement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entitle Achievement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_OP_Action_List_Template__c</fullName>
        <label>O/P Action List Template</label>
        <referenceTo>EUR_CRM_OP_Action_List_Template__c</referenceTo>
        <relationshipName>EUR_CRM_OP_Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OP_Action_Name_English__c</fullName>
        <label>O/P Action Name - English</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OP_Record_ID__c</fullName>
        <label>O/P Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_OP_Sequence_Order__c</fullName>
        <description>Sets the sequence order for a Visit Action for a particular Objective/Promotion</description>
        <label>O/P Sequence Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stage_Sequence_Order__c</fullName>
        <label>Stage Sequence Order</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sell</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Evaluation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Action_RecordTypeID__c</fullName>
        <label>Visit Action RecordTypeID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Action_RecordType_DevName__c</fullName>
        <description>Specifies the Record Type Developer Name of the matching Visit Action so the Mobile App can create the correct Visit Action for the SR to fill out</description>
        <label>Visit Action RecordType DevName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Action_Success_Status__c</fullName>
        <label>Visit Action Success Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Qty Confirmed</fullName>
                </value>
                <value>
                    <fullName>Qty Not Confirmed</fullName>
                </value>
                <value>
                    <fullName>Listed</fullName>
                </value>
                <value>
                    <fullName>Not Listed</fullName>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Did Not Present</fullName>
                </value>
                <value>
                    <fullName>Participating</fullName>
                </value>
                <value>
                    <fullName>Not Participating</fullName>
                </value>
                <value>
                    <fullName>Evaluation: Successful</fullName>
                </value>
                <value>
                    <fullName>Evaluation: Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Evaluation: Deferred</fullName>
                </value>
                <value>
                    <fullName>Suitable</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
                <value>
                    <fullName>Staff Informed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Not Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>O/P Action (EU)</label>
    <listViews>
        <fullName>All_DE</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_OP_Action_Name_English__c</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>EUR_CRM_OP_Sequence_Order__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordType_DevName__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordTypeID__c</columns>
        <columns>EUR_CRM_Can_Reoccur__c</columns>
        <columns>EUR_CRM_Entitle_Achievement__c</columns>
        <columns>EUR_CRM_Visit_Action_Success_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_DE_OFF_Confirm_Agreement_To_Buy,EUR_CRM_ObjPromo_Action__c.EUR_DE_OFF_Discussion,EUR_CRM_ObjPromo_Action__c.EUR_DE_OFF_Do_TMKT_Document</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_DE_OFF_Enter_Sell_In_Qty,EUR_CRM_ObjPromo_Action__c.EUR_DE_OFF_Listing_Check,EUR_CRM_ObjPromo_Action__c.EUR_DE_OFF_Presentation</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_DE_ON_Confirm_Participation,EUR_CRM_ObjPromo_Action__c.EUR_DE_ON_Enter_Sell_In_Qty,EUR_CRM_ObjPromo_Action__c.EUR_DE_ON_Presentation</value>
        </filters>
        <label>All DE</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_DE</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RU_O_P</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_OP_Action_Name_English__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Visit_Action_RecordType_DevName__c</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>EUR_CRM_OP_Sequence_Order__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordTypeID__c</columns>
        <columns>EUR_CRM_Can_Reoccur__c</columns>
        <columns>EUR_CRM_Entitle_Achievement__c</columns>
        <columns>EUR_CRM_Visit_Action_Success_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_RU_OFF_OP_Action,EUR_CRM_ObjPromo_Action__c.EUR_RU_ON_OP_Action</value>
        </filters>
        <label>All RU O/P Actions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BE_OFF_OP_Actions_All</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_OP_Action_Name_English__c</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>EUR_CRM_OP_Sequence_Order__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordType_DevName__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordTypeID__c</columns>
        <columns>EUR_CRM_Can_Reoccur__c</columns>
        <columns>EUR_CRM_Entitle_Achievement__c</columns>
        <columns>EUR_CRM_Visit_Action_Success_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_BE_OFF_OP_Action</value>
        </filters>
        <label>All BE OFF O/P Actions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE_Sales_Director_Off_Trade</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BE_ON_OP_Actions_All</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_OP_Action_Name_English__c</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>EUR_CRM_OP_Sequence_Order__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordType_DevName__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordTypeID__c</columns>
        <columns>EUR_CRM_Can_Reoccur__c</columns>
        <columns>EUR_CRM_Entitle_Achievement__c</columns>
        <columns>EUR_CRM_Visit_Action_Success_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_BE_ON_OP_Action</value>
        </filters>
        <label>All BE ON O/P Actions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE_Sales_Director_Horeca_Belux</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_DK_OFF_OP_Actions_All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_OP_Action_Name_English__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>EUR_CRM_Action_List_External_ID__c</columns>
        <columns>EUR_CRM_Visit_Action_Success_Status__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordType_DevName__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordTypeID__c</columns>
        <columns>EUR_CRM_Stage__c</columns>
        <columns>EUR_CRM_Stage_Sequence_Order__c</columns>
        <columns>EUR_CRM_OP_Sequence_Order__c</columns>
        <columns>EUR_CRM_Can_Reoccur__c</columns>
        <columns>EUR_CRM_Entitle_Achievement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_DK_OFF_OP_Action</value>
        </filters>
        <label>All DK OFF O/P Actions</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
            <role>EUR_DK</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_FI_OP_Actions_All</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_OP_Action_Name_English__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordType_DevName__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordTypeID__c</columns>
        <columns>EUR_CRM_Stage__c</columns>
        <columns>EUR_CRM_Stage_Sequence_Order__c</columns>
        <columns>EUR_CRM_OP_Sequence_Order__c</columns>
        <columns>EUR_CRM_Can_Reoccur__c</columns>
        <columns>EUR_CRM_Entitle_Achievement__c</columns>
        <columns>EUR_CRM_Visit_Action_Success_Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_FI_Presentation</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_FI_Confirm_Participation</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_FI_Enter_Sell_In_Volume_Estimate</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_FI_Follow_Up</value>
        </filters>
        <label>All FI O/P Actions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_PT_All_O_P_Action_View</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Action_List_External_ID__c</columns>
        <columns>EUR_CRM_Can_Reoccur__c</columns>
        <columns>EUR_CRM_Entitle_Achievement__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>EUR_CRM_OP_Action_Name_English__c</columns>
        <columns>EUR_CRM_OP_Record_ID__c</columns>
        <columns>EUR_CRM_OP_Sequence_Order__c</columns>
        <columns>EUR_CRM_Stage__c</columns>
        <columns>EUR_CRM_Stage_Sequence_Order__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_PT_Off_Trade_OP_Action</value>
        </filters>
        <label>EUR PT All O/P Action View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_ZA_O_P_Actions</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Can_Reoccur__c</columns>
        <columns>EUR_CRM_Entitle_Achievement__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_OP_Action_List_Template__c</columns>
        <columns>EUR_CRM_OP_Action_Name_English__c</columns>
        <columns>EUR_CRM_OP_Sequence_Order__c</columns>
        <columns>EUR_CRM_Stage__c</columns>
        <columns>EUR_CRM_Stage_Sequence_Order__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordType_DevName__c</columns>
        <columns>EUR_CRM_Visit_Action_RecordTypeID__c</columns>
        <columns>EUR_CRM_Visit_Action_Success_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_ZA_OFF_Trade_Define_Participation_Conditions,EUR_CRM_ObjPromo_Action__c.EUR_ZA_OFF_Trade_Follow_Up</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_ZA_OFF_Trade_Sell_In_Promotion,EUR_CRM_ObjPromo_Action__c.EUR_ZA_ON_Trade_Define_Participation_Conditions</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Action__c.EUR_ZA_ON_Trade_Follow_Up,EUR_CRM_ObjPromo_Action__c.EUR_ZA_ON_Trade_Sell_In_Promotion</value>
        </filters>
        <label>All ZA O/P Actions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>O/P Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>O/P Action (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_OFF_OP_Action</fullName>
        <active>true</active>
        <label>BE OFF O/P Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_ON_OP_Action</fullName>
        <active>true</active>
        <label>BE ON Trade Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Confirm_Agreement_To_Buy</fullName>
        <active>true</active>
        <label>DE OFF Confirm Agreement to Buy</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Discussion</fullName>
        <active>true</active>
        <label>DE OFF Discussion</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Do_TMKT_Document</fullName>
        <active>true</active>
        <label>DE OFF Do TMKT Document</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Enter_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE OFF Enter Sell In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Listing_Check</fullName>
        <active>true</active>
        <label>DE OFF Listing Check</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_OFF_Presentation</fullName>
        <active>true</active>
        <label>DE OFF Presentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_ON_Confirm_Participation</fullName>
        <active>true</active>
        <label>DE ON Confirm Participation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_ON_Enter_Sell_In_Qty</fullName>
        <active>true</active>
        <label>DE ON Enter Sell In Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_ON_Presentation</fullName>
        <active>true</active>
        <label>DE ON Presentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_WS_Confirm_Participation</fullName>
        <active>true</active>
        <label>DE WS Confirm Participation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_WS_Do_Presentation</fullName>
        <active>true</active>
        <label>DE WS Do Presentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_WS_Enter_Sell_in_Qty</fullName>
        <active>true</active>
        <label>DE WS Enter Sell in Qty</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_OFF_OP_Action</fullName>
        <active>true</active>
        <label>DK OFF O/P Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Confirm_Participation</fullName>
        <active>true</active>
        <label>FI Confirm Participation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Enter_Sell_In_Volume_Estimate</fullName>
        <active>true</active>
        <label>FI Enter Sell In Volume Estimate</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Follow_Up</fullName>
        <active>true</active>
        <label>FI Follow Up</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Presentation</fullName>
        <active>true</active>
        <label>FI Presentation</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_OP_Action</fullName>
        <active>true</active>
        <label>EUR PT Off Trade OP Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_OFF_OP_Action</fullName>
        <active>true</active>
        <label>RU OFF O/P Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_ON_OP_Action</fullName>
        <active>true</active>
        <label>RU ON O/P Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_OFF_Trade_Define_Participation_Conditions</fullName>
        <active>true</active>
        <label>ZA OFF Trade - Define Participation Conditions</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_OFF_Trade_Follow_Up</fullName>
        <active>true</active>
        <label>ZA OFF Trade - Follow Up</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_OFF_Trade_Sell_In_Promotion</fullName>
        <active>true</active>
        <label>ZA OFF Trade - Sell In Promotion</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_ON_Trade_Define_Participation_Conditions</fullName>
        <active>true</active>
        <label>ZA ON Trade - Define Participation Conditions</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_ON_Trade_Follow_Up</fullName>
        <active>true</active>
        <label>ZA ON Trade - Follow Up</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_ON_Trade_Sell_In_Promotion</fullName>
        <active>true</active>
        <label>ZA ON Trade - Sell In Promotion</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>